--- a/css/styles.css
+++ b/css/styles.css
@@ -5,3 +5,25 @@
 #choose {
     display: none;
 }
+
+#jump {
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 23px;
+    padding: 20px;
+}
+
+body {
+    width: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-image: url("../images/happy.jpg")
+}
+
+.jumbotron {
+    opacity: 0.6;
+}
+
+.well {
+    opacity: 0.6;
+}
